Finished spacing objectives + corrected container errors and completed project exercise!

--- a/style.css
+++ b/style.css
@@ -1,29 +1,45 @@
 
 body {
     height: 100%;
+    width: 100%;
     font-family: 'Roboto', sans-serif;
     font-size: 18px;
 }
 
 img {
     height: 200px;
-    width: 300px;
+    width: 500px;
     margin-top: 40px;
+    align-self: center;
 }
 
 a {
     text-decoration: none;
 }
 
-.container /*Container for divs/random info*/ {
+p {
+    text-align: center;
+}
+
+.container /*Container for body content*/ {
     display: flex;
     flex-direction: column;
+}
+
+.div-container /*Container for divs/random info*/  {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.p-container {
+    display: flex;
+    gap: 50px;
 }
 
 .head-container /* Header container */ {
     display: flex;
     flex-direction: row;
-    border: 10px dashed green;
 }
 
 .header, .footer {
@@ -32,37 +48,33 @@ a {
 }
 
 .header {
-    border: 10px dashed yellow;
     padding: 15px 40px 40px 40px;
-    height: 25%;
+    height: 30%;
     width: 100%;
 }
 
 .heading /*This website is awesome!*/ {
-    display: block;
-    flex-direction: column;
-    font-size: 48px;
+    font-size: 55px;
     color: #f9faf8 ;
-    font-weight: .800;
+    font-weight: 800;
+    text-align: left;
+    padding-left: 50px; 
+    margin: 70px 0 0 0;
 }
 
 .container-one {
     display: flex;
     width: 50%;
-    flex-direction: row;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
-    border: 15px dashed purple;
     order: 2;
 }
 
 .container-two {
-    display: block;
+    display: flex;
     width: 50%;
     flex-direction: column;
-    flex-wrap: wrap;
-    border: 15px dashed cornflowerblue;
 }
 
 .subtext, .c2a {
@@ -70,61 +82,140 @@ a {
     color: #E5E7EB;
 }
 
+.subtext {
+    text-align: justify;
+    padding-left: 50px;
+    margin: 0;
+}
+
 .logo {
     font-size: 24px;
     color: #f9faf8;
-    border: 10px dashed red;
-    align-items: flex-start;
+    align-self: flex-start;
+    margin-left: 38px;
 }
 
 .nav{
     font-size: 16px;
     color: #f9faf8;
-    border: 10px dashed yellow;
+    width: 140px;
 }
 
 .nav-bar {
-    display: inline-block;
-    flex-direction: row;
+    display: flex;
+    align-self: flex-start;
+    margin-left: 200px;
+    gap: 5px;
+
 }
-
-
 
 .button {
     background-color: #3882F6;
     color: #E5E7EB;
+    align-self: flex-start;
+    margin-left: 50px;
+    width: 140px;
+    height: 38px;
+    border-radius: 8px;
+    font-weight: 800;
+    font-size: medium;
+    margin-top: 10px;
+    
 }
 
 .info-header {
     font-size: 36px;
     color: #1f2937;
-    font-weight: .800;
+    font-weight: 800;
 }
 
 .c2a {
+    display: flex;
     background-color: #3882F6;
-    border: 10px dashed pink;
     margin: 90px;
+    padding-left: 120px;
+    height: 130px;
+    border-radius: 10px;
+
 }
 
 .c2a-main {
-    font-weight: bold;
+    align-self: flex-start;
+    font-weight: 700;
     font-size: 24px;
+    margin: 35px 0 0 0;
+}
+
+.c2a-sub {
+    align-self: flex-start;
+    text-align: justify;
+    text-justify: auto;
+    margin: 0;
+}
+
+.c2a-button {
+    background-color: #3882F6;
+    color: #E5E7EB;
+    border: 2px solid white;
+    border-radius: 8px;
+    height: 40px;
+    width: 120px;
+    font-weight: 700;
+    font-size: medium;
+
+}
+
+.c2a-left {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    text-align: justify;
+    width: 60%;
+}
+
+.c2a-right {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
 }
 
 .quote {
     background-color: #E5E7EB;
     font-size: 36px;
     font-style: italic;
-    color: #1f2937
+    color: #1f2937;
+    padding: 75px;
+}
+
+.quote-txt {
+    text-align: justify;
+    text-justify: inter-character;
+}
+
+.quote-bold {
+    font-weight: 700;
+    text-align: right;
 }
 
 .div {
     display: flex;
-    border: 8px solid #3882F6;
-    flex-wrap: wrap;
-    height: 50px;
-    width: 50px;
+    border: 3px solid #3882F6;
+    border-radius: 15px 30px 50px;
+    height: 130px;
+    width: 200px;
+}
+
+.rdm-container {
+    height: 400px;
+    padding: 50px;
+}
+
+.image {
+    display: flex;
+    justify-content: center;
+    align-self: center;
 }
 
 .footer {
